# sac

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: SDLImport.cmake  SDL_imageImport.cmake  SDL_ttfImport.cmake  cglmImport.cmake  cimguiImport.cmake  clayImport.cmake  glfwImport.cmake
include/: common.h  key_commands.h  mouse_commands.h  x_key_commands.h
src/: CMakeLists.txt  main.c
src/SAC/: old-sac.c  sac.c  sac.h
src/SAC/cglm/: misc.c  misc.h
src/SAC/common/: common.c
src/SAC/examples/: sdl3-simple-demo.c  sdl3-ttf-example.c
src/SAC/examples/shared-layouts/: clay-video-demo.c  clay-video-demo.h
src/SAC/input/: input.c  input.h
src/SAC/keyboard/: key_commands.c  win_key_commands.c
src/SAC/mouse/: win-mouse.c  win_mouse.c
src/SAC/output/: output.c  output.h
src/SAC/renderers/: clay_renderer_SDL3.c  clay_renderer_SDL3.h  r_fonts.c  r_fonts.h  r_imgui.c  r_imgui.h  renderer_SDL3.h
src/SAC/shared-layouts/: clay-video.c  clay-video.h  imgui_video.c  imgui_video.h
src/SAC/shared_includes/: loc_cimgui.h
src/SAC/shared_layouts/: clay-video.c  imgui_video.c  imgui_video.h
src/SAC/state/: state.c  state.h
src/SAC/time/: time.c  time.h
src/SAC/vulkan/: setup.c  setup.h
src/examples/: CMakeLists.txt  sdl3_ttf_example.c  sdl3_vulkan_cimgui_example.c
src/odometer/: CMakeLists.txt  basewin.hpp  test_win_odometer.cpp  win_odometer.cpp
src/odometer/util/: Timer.cpp  Timer.hpp  WinDeltaTime.cpp  WinDeltaTime.hpp
